--- a/.contrib/Parser/.config/retail/debug.config
+++ b/.contrib/Parser/.config/retail/debug.config
@@ -17,7 +17,8 @@
     ],
     "TrackUseCounts": [
         "questID",
-        "sourceID"
+        "sourceID",
+        "explorationID"
     ],
     "PreProcessorTags": [
         "RETAIL",
