Classic: Updated Naxxramas (Wrath) to show 25 man loot when in 10 man if built with a special preprocessor command exclusive to classic. (This is so that we can quickly change the style for phase one of wrath classic if/when it releases in Wrath Anniversary someday.)

--- a/.contrib/Parser/.config/classic/03 - Wrath.config
+++ b/.contrib/Parser/.config/classic/03 - Wrath.config
@@ -16,6 +16,7 @@
 		"NOSIMPLIFY",
 		"INCLUDE_QUALITY",
 		"EXPORT_ACHIEVEMENTDB_SHENDRALAR",
+		"NAXX_10MAN_DROPS_25MAN_LOOT",
     ],
     "AutoLocalizeTypes": [
     ],
