--- a/.contrib/Parser/.config/classic/04 - Cataclysm.config
+++ b/.contrib/Parser/.config/classic/04 - Cataclysm.config
@@ -15,6 +15,7 @@
 		"OBJECTIVES",
 		"NOSIMPLIFY",
 		"INCLUDE_QUALITY",
+		"NAXX_10MAN_DROPS_25MAN_LOOT",
     ],
     "AutoLocalizeTypes": [
     ],
