--- a/.contrib/Parser/.config/classic/09 - Shadowlands.config
+++ b/.contrib/Parser/.config/classic/09 - Shadowlands.config
@@ -16,6 +16,7 @@
 		"OBJECTIVES",
 		"NOSIMPLIFY",
 		"INCLUDE_QUALITY",
+		"NAXX_10MAN_DROPS_25MAN_LOOT",
     ],
     "AutoLocalizeTypes": [
     ],
