--- a/.contrib/Parser/.config/classic/11 - The War Within.config
+++ b/.contrib/Parser/.config/classic/11 - The War Within.config
@@ -16,6 +16,7 @@
 		"OBJECTIVES",
 		"NOSIMPLIFY",
 		"INCLUDE_QUALITY",
+		"NAXX_10MAN_DROPS_25MAN_LOOT",
 		"COMMON_QUALITY_TRANSMOGS",
     ],
     "AutoLocalizeTypes": [
