--- a/.contrib/Parser/.config/retail/retail.config
+++ b/.contrib/Parser/.config/retail/retail.config
@@ -85,6 +85,12 @@
                     999
                 ]
             },
+            "learnedAt": {
+                "bounds": [
+                    1,
+                    999
+                ]
+            },
             "modID": {
                 "bounds": [
                     0,
