--- a/.contrib/Parser/.config/retail/beta.config
+++ b/.contrib/Parser/.config/retail/beta.config
@@ -5,12 +5,12 @@
     "wago-directories": [
 		"../.wago/PTR",
 	],
-    "DataPhase": "TWW",
+    "DataPhase": "MID",
     "DataPatch": [
-        11,
+        12,
         0,
-        2,
-        56110
+        0,
+        99999
     ],
     "PreProcessorTags" : [
         "RETAIL",
