[Parser] Now defaulting to use newlines in [Git] pushes of Categories files (automated builds for Releases will continue to be compressed) [This should provide better diff insight of unexpected changes in Categories]

--- a/.contrib/Parser/.config/root.config
+++ b/.contrib/Parser/.config/root.config
@@ -1,5 +1,5 @@
 {
-    "UseExportNewlines" : false,
+    "UseExportNewlines" : true,
     "SINGULAR_PLURAL_FIELDS_LONG": {
         "sourceAchievement": "sourceAchievements",
         "sourceQuest": "sourceQuests",
