--- a/.contrib/Source Code/Parser/Parser.csproj
+++ b/.contrib/Source Code/Parser/Parser.csproj
@@ -142,6 +142,8 @@
     <Compile Include="FieldTypes\LockCriteria.cs" />
     <Compile Include="FieldTypes\Timeline.cs" />
     <Compile Include="FieldTypes\TimelineEntry.cs" />
+    <Compile Include="Framework\ConcurrentHashSet.cs" />
+    <Compile Include="Framework\ConcurrentDataList.cs" />
     <Compile Include="Framework\Framework.Objects.cs" />
     <Compile Include="Framework\Framework.Items.cs" />
     <Compile Include="Framework\Framework.cs" />
