[Parser] Fixed a few fields potentially remaining in Export for certain object Types

--- a/.contrib/Parser/.config/retail/retail.config
+++ b/.contrib/Parser/.config/retail/retail.config
@@ -179,6 +179,8 @@
             "convertedKey": "itemID",
             "ignoredFields": [
                 "f",
+                "modID",
+                "bonusID",
                 "spellID"
             ]
         },
@@ -190,6 +192,7 @@
             "ignoredFields": [
                 "f",
                 "spellID",
+                "bonusID",
                 "modID"
             ]
         },
@@ -202,6 +205,7 @@
                 "f",
                 "spellID",
                 "modID",
+                "bonusID",
                 "creatureID",
                 "npcID"
             ]
@@ -214,6 +218,7 @@
             "ignoredFields": [
                 "f",
                 "modID",
+                "bonusID",
                 "creatureID",
                 "npcID"
             ]
@@ -226,6 +231,7 @@
             "ignoredFields": [
                 "f",
                 "modID",
+                "bonusID",
                 "creatureID",
                 "npcID"
             ]
@@ -241,6 +247,7 @@
                 "modID",
                 "creatureID",
                 "npcID",
+                "extraTransmogSetItems",
                 "extraTransmogSetSpells"
             ]
         },
@@ -255,6 +262,7 @@
                 "modID",
                 "creatureID",
                 "npcID",
+                "extraTransmogSetItems",
                 "extraTransmogSetSpells"
             ]
         }
