[Parser] Adjusted SpellEffect regex to retain the trigger spell 64 type [Parser] Parser now follows spell triggers to obtain further incorporation data [Parser] Refactored some questID incorporation to better-determine questIDs in various situations [Parser] Debug: Added RETAIL_STYLE_FILL_ENABLED pre-processor tag [DB] Removed unnecessary symlink from 'Letter of Note, Premier Party Planner' now that questID handling takes care of the same data association

--- a/.contrib/Parser/.config/retail/debug.config
+++ b/.contrib/Parser/.config/retail/debug.config
@@ -18,12 +18,14 @@
     "TrackUseCounts": [
         "questID",
         "sourceID",
-        "explorationID"
+        "explorationID",
+        "criteriaID",
     ],
     "PreProcessorTags": [
         "RETAIL",
         "DEBUG",
 		"EXPLORATION",
 		"COMMON_QUALITY_TRANSMOGS",
+		"RETAIL_STYLE_FILL_ENABLED",
     ],
 }
