Added Campsites and Decors to harvester

--- a/.contrib/Parser/.config/retail/debug.config
+++ b/.contrib/Parser/.config/retail/debug.config
@@ -1,6 +1,7 @@
 {
     "DebugDB": [
         "achID",
+        "campsiteID",
         "explorationID",
         "factionID",
         "flightpathID",
