[Issue Report] Update description.

--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -1,12 +1,13 @@
 name: Bug Report
-description: Something broken?
+description: Report an issue or something not working correctly.
 labels: ["Addon Bug"]
+
 body:
   - type: dropdown
     id: flavour
     attributes:
       label: "Which flavo(u)r(s) of WoW are you using?"
-      description: "Select all applicable versions of WoW."
+      description: "Select all applicable versions of World of Warcraft."
       multiple: true
       options:
         - "Retail"
@@ -20,11 +21,12 @@ body:
         - "Hardcore Anniversary Realms"
     validations:
       required: true
+
   - type: dropdown
     id: realm
     attributes:
       label: "Which server realm(s) are you in?"
-      description: "Select the realm(s) where you are experiencing this bug."
+      description: "Select the region(s) where you encountered the issue."
       multiple: true
       options:
         - "US"
@@ -32,16 +34,18 @@ body:
         - "KR"
         - "TW"
         - "CN"
+
   - type: input
     id: wow_build
     attributes:
-      label: "What build number of WoW?"
-      description: "Specify the build number of your WoW client."
+      label: "WoW Client Build"
+      description: "Enter the build number of your WoW client (found on the login screen)."
       placeholder: "e.g., 10.1.7.51000"
+
   - type: dropdown
     id: att_version
     attributes:
-      label: "Which version of ATT?"
+      label: "ATT Version"
       description: "Select the version of ATT you are using."
       options:
         - "Latest release"
@@ -49,43 +53,49 @@ body:
         - "git"
     validations:
       required: true
+
   - type: input
     id: att_build
     attributes:
-      label: "What build number of ATT?"
-      description: "Provide the specific build number of ATT."
-      placeholder: "e.g., 4.1.11(release)/4.1.11-34-g9b96b53(alpha)"
+      label: "ATT Build Number"
+      description: "Provide the specific ATT build (e.g., from `/att` or addon info)."
+      placeholder: "e.g., 4.1.11(release) / 4.1.11-34-g9b96b53(alpha)"
+
   - type: textarea
     id: bug_description
     attributes:
-      label: "What isn't working? What was supposed to happen?"
-      description: "Provide a detailed description of the bug, including what you expected to happen."
-      placeholder: "Describe the bug here..."
+      label: "Describe the Bug"
+      description: "What isn't working? What did you expect to happen?"
+      placeholder: "Describe the issue here..."
     validations:
       required: true
+
   - type: textarea
     id: screenshot
     attributes:
       label: "Screenshot"
-      description: "Provide a screenshot to help illustrate the bug."
-      placeholder: "Drop screenshot here..."
+      description: "Attach a screenshot or image that helps illustrate the issue."
+      placeholder: "Drop image(s) here or paste links..."
+
   - type: textarea
     id: reproduce_steps
     attributes:
-      label: "Steps to reproduce the behavior."
-      description: "Provide detailed steps to reproduce the bug:\n1. Go to '...'\n2. Click on '...'\n3. Scroll down to '...'\n4. See bug(s)."
+      label: "Steps to Reproduce"
+      description: "Provide detailed steps so we can reproduce the issue:\n1. Go to '...'\n2. Click '...'\n3. Observe the bug."
       placeholder: "List steps here..."
     validations:
       required: true
+
   - type: textarea
     id: lua_errors
     attributes:
-      label: "Are you experiencing any lua errors?"
-      description: "These errors appear when using the BugSack+BugGrabber addons or enabling script errors with `/console scriptErrors 1`."
-      placeholder: "Paste any lua errors here..."
+      label: "Lua Errors"
+      description: "Include any Lua error messages (from BugSack or `/console scriptErrors 1`)."
+      placeholder: "Paste error logs here..."
+
   - type: textarea
     id: additional_context
     attributes:
-      label: "Anything else?"
-      description: "Add any additional information or context about the bug."
-      placeholder: "Provide additional details here..."
+      label: "Additional Context"
+      description: "Add any other information that might help us diagnose the issue."
+      placeholder: "Anything else to add?"
