--- a/.contrib/Parser/.config/root.config
+++ b/.contrib/Parser/.config/root.config
@@ -1,5 +1,5 @@
 {
-    "UseExportNewlines" : true,
+    "UseExportNewlines": true,
     "SINGULAR_PLURAL_FIELDS_LONG": {
         "sourceAchievement": "sourceAchievements",
         "sourceQuest": "sourceQuests",
@@ -14,6 +14,27 @@
         "zone-text-areas"
     ],
     "PASS_THRU_FIELDS": [
-        "maps_disp",
+        "maps_disp"
+    ],
+    "SOURCED": [
+        "achID",
+        "creatureID",
+        "currencyID",
+        "explorationID",
+        "factionID",
+        "flightpathID",
+        "followerID",
+        "headerID",
+        "itemID",
+        "mapID",
+        "missionID",
+        "mountID",
+        "npcID",
+        "objectID",
+        "questID",
+        "recipeID",
+        "speciesID",
+        "spellID",
+        "sourceID"
     ]
 }
