[Parser] Implemented new replacement algorithm for structure simplification * Structure replacements are now performed nearly linearly with much lower scaling on time cost due to replacement count * Fixed a couple export whitespace issues * Added Exporter logic to split itself into roughly-equal-sized StringBuilders to allow for better multi-threading handling of replacements * Simplified some logging about structure replacements * Improved performance of simplification process * Retail: Now performing up to 5000 structure replacements per Category (was 1000)

--- a/.contrib/Source Code/Parser/Parser.csproj
+++ b/.contrib/Source Code/Parser/Parser.csproj
@@ -151,6 +151,7 @@
     <Compile Include="Framework\Framework.Processing.cs" />
     <Compile Include="Framework\Handler.cs" />
     <Compile Include="Framework\HierarchicalFieldAdjustments.cs" />
+    <Compile Include="Framework\ReplacementTree.cs" />
     <Compile Include="Framework\Structs.cs" />
     <Compile Include="Harvesters\ObjectHarvester.cs" />
     <Compile Include="Framework\ParseStage.cs" />
