[Parser] Refactored 'provider' handling * 'provider' and 'providers' now utilize a typed-object for internal handling [This greatly simplifies logic concerning this field in the Parser] * Valid 'provider' types are now defined in root.config * 'providers' now have consistent ordering when exported [order only matters in niche cases during parsing -- exported providers are order agnostic] * Fixed an issue where NYI provider items were not properly removed from providers * Fixed an issue where provider Spells would persist when provider Items also exist [DB] Lemix Gear Conversion now uses 'providers' instead of 'cost'

--- a/.contrib/Parser/.config/root.config
+++ b/.contrib/Parser/.config/root.config
@@ -17,6 +17,12 @@
         "maps_disp",
         "fillAdjust"
     ],
+    "PROVIDER_TYPES": [
+        "i",
+        "n",
+        "o",
+        "s",
+    ],
     "SOURCED": [
         "achID",
         "creatureID",
