--- a/.github/workflows/Process Automation Tool (PAT).yml
+++ b/.github/workflows/Process Automation Tool (PAT).yml
@@ -2,8 +2,8 @@ name: Process Automation Tool (PAT)
 
 # Controls when the action will run.
 on:
-    schedule:
-        - cron: "0 7 * * *" #at 07:00 UTC everyday
+    # schedule:
+    #     - cron: "0 7 * * *" #at 07:00 UTC everyday
 
     # Allows you to run this workflow manually from the Actions tab
     workflow_dispatch:
