### Housing Decor is now parsed in ATT! * Decor is automatically assigned to Items based on Wago data * Added HouseDecor Wago table & pulled latest Wago for Retail * Stubbed out a Decor class [WIP - Will require proper collection handling and tracking settings] [Parser] Event tags on Ensembles are now applied to Sources within those Ensembles [Parser] Added a debug warning for nested Achievements [Parser] Explicitly non-collectible Headers detection has been cleaned up and is now a normal warning [Logic] Retail: Temp protection against a negative AchievementID that showed up...

--- a/.contrib/Parser/.config/retail/retail.config
+++ b/.contrib/Parser/.config/retail/retail.config
@@ -265,6 +265,17 @@
                 "extraTransmogSetItems",
                 "extraTransmogSetSpells"
             ]
+        },
+        {
+            "function": "CreateDecor",
+            "shortcut": "de",
+            "objectType": "decorID",
+            "convertedKey": "decorID",
+            "ignoredFields": [
+                "f",
+                "bonusID",
+                "modID",
+            ]
         }
     ]
 }
