--- a/.contrib/Source Code/Parser/Parser.csproj
+++ b/.contrib/Source Code/Parser/Parser.csproj
@@ -92,6 +92,7 @@
     <Compile Include="DB\Attributes\LocalizeAttribute.cs" />
     <Compile Include="DB\Types\HolidayNames.cs" />
     <Compile Include="DB\Types\Holiday.cs" />
+    <Compile Include="DB\Types\HouseDecor.cs" />
     <Compile Include="DB\Types\UiMapAssignment.cs" />
     <Compile Include="DB\Types\UiMap.cs" />
     <Compile Include="DB\Types\ContentTuning.cs" />
