[DB] Revised how Legion Artifacts are listed slightly to resolve a couple nuanced issues [Parser] config adjustments for proper JSON linting [Parser] Re-parsed to fix a Criteria issue

--- a/.contrib/Parser/.config/retail/retail.config
+++ b/.contrib/Parser/.config/retail/retail.config
@@ -3,8 +3,9 @@
     "root-data": "./DATAS",
     "db-relative": "Retail/",
     "wago-directories": [
-		"../.wago/11 - The War Within",
+		"../.wago/11 - The War Within"
 	],
+    "IgnoreWowheadRetrieval": true,
     "DataPhase": "TWW",
     "DataPatch": [
         11,
@@ -40,7 +41,7 @@
         "RETAIL",
 		"EXPLORATION",
 		"COMMON_QUALITY_TRANSMOGS",
-		"RETAIL_STYLE_FILL_ENABLED",
+		"RETAIL_STYLE_FILL_ENABLED"
     ],
     "SimplifyStructures" : [
         5000,2
@@ -150,7 +151,7 @@
                     1,
                     999999
                 ]
-            },
+            }
         }
     },
     "ObjectTypes": [
@@ -274,7 +275,7 @@
             "ignoredFields": [
                 "f",
                 "bonusID",
-                "modID",
+                "modID"
             ]
         }
     ]
