[Parser] Some Profession skill updates * Now using Wago SkillLineAbility to link Recipes to their 'requireSkill' base ProfessionID * SkillLineAbility now includes 'learnedAt' and 'skillID' linking * Retail: Items no longer include 'learnedAt' (this is typically completely inaccurate to actual tooltip requirements and unused in Retail ATT beyond tooltip display)

--- a/.contrib/Parser/.config/retail/retail.config
+++ b/.contrib/Parser/.config/retail/retail.config
@@ -128,6 +128,12 @@
                     9999999
                 ]
             },
+            "skillID": {
+                "bounds": [
+                    1,
+                    99999
+                ]
+            },
             "spellID": {
                 "bounds": [
                     1,
